--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "internhub",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "intern-hub"
+  "defaultProject": "intern-hub",
+  "cli": {
+    "analytics": false
+  }
 }
